--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "concat-stream": "^2.0.0",
     "fs": "0.0.1-security",
+    "net": "^1.0.2",
     "through2": "^3.0.1"
   },
   "scripts": {
