--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "concat-stream": "^2.0.0",
+    "crypto": "^1.0.1",
     "fs": "0.0.1-security",
     "net": "^1.0.2",
     "through2": "^3.0.1"
