Core streams notes and childprocess example

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "child_process": "^1.0.2",
     "concat-stream": "^2.0.0",
     "crypto": "^1.0.1",
     "fs": "0.0.1-security",
