--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "crypto": "^1.0.1",
     "fs": "0.0.1-security",
     "net": "^1.0.2",
-    "through2": "^3.0.1"
+    "through2": "^3.0.1",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
