--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "crypto": "^1.0.1",
     "fs": "0.0.1-security",
     "net": "^1.0.2",
+    "split2": "^3.1.1",
     "through2": "^3.0.1",
     "zlib": "^1.0.5"
   },
