--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "child_process": "^1.0.2",
     "concat-stream": "^2.0.0",
     "crypto": "^1.0.1",
+    "ecstatic": "^4.1.2",
     "fs": "0.0.1-security",
     "net": "^1.0.2",
     "split2": "^3.1.1",
