--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "net": "^1.0.2",
     "split2": "^3.1.1",
     "through2": "^3.0.1",
+    "websocket-stream": "^5.5.0",
+    "yo-yo": "^1.4.1",
     "zlib": "^1.0.5"
   },
   "scripts": {
