--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "collect-stream": "^1.2.1",
     "concat-stream": "^2.0.0",
     "crypto": "^1.0.1",
+    "duplexify": "^4.1.1",
     "ecstatic": "^4.1.2",
     "from2": "^2.3.0",
     "fs": "0.0.1-security",
+    "mkdirp": "^0.5.1",
     "net": "^1.0.2",
     "split2": "^3.1.1",
     "through2": "^3.0.1",
