pump and end-of-stream examples.

--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "crypto": "^1.0.1",
     "duplexify": "^4.1.1",
     "ecstatic": "^4.1.2",
+    "end-of-stream": "^1.4.4",
     "from2": "^2.3.0",
     "fs": "0.0.1-security",
     "mkdirp": "^0.5.1",
     "net": "^1.0.2",
+    "pump": "^3.0.0",
+    "pumpify": "^2.0.1",
     "split2": "^3.1.1",
     "through2": "^3.0.1",
     "to2": "^1.0.0",
