--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "net": "^1.0.2",
     "pump": "^3.0.0",
     "pumpify": "^2.0.1",
+    "rpc-stream": "^2.1.2",
     "split2": "^3.1.1",
     "through2": "^3.0.1",
     "to2": "^1.0.0",
