Multiplex examples and the end of the workshop.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "from2": "^2.3.0",
     "fs": "0.0.1-security",
     "mkdirp": "^0.5.1",
+    "multiplex": "^6.7.0",
     "net": "^1.0.2",
     "pump": "^3.0.0",
     "pumpify": "^2.0.1",
